--- a/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/Areas/Admin/Views/Categories/Edit.cshtml
@@ -56,8 +56,8 @@
                         <span asp-validation-for="Picture" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-outline-primary" />
-                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+                        <input type="submit" value="Save" class="btn btn-success" />
+                        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
                     </div>
                 </form>
             </div>
