--- a/Areas/Admin/Views/Suppliers/Edit.cshtml
+++ b/Areas/Admin/Views/Suppliers/Edit.cshtml
@@ -58,11 +58,7 @@
             
                  
               
-                    <div class="form-group">
-                        <label asp-for="CurrentOrder" class="control-label"></label>
-                        <input asp-for="CurrentOrder" class="form-control" />
-                        <span asp-validation-for="CurrentOrder" class="text-danger"></span>
-                    </div>
+            
               
                  
                     <div class="form-group">
@@ -81,8 +77,8 @@
                         <span asp-validation-for="Notes" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Save" class="btn btn-outline-primary" />
-                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+                        <input type="submit" value="Save" class="btn btn-success" />
+                        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
                     </div>
                 </form>
             </div>
