--- a/Areas/Admin/Views/Categories/Details.cshtml
+++ b/Areas/Admin/Views/Categories/Details.cshtml
@@ -60,9 +60,9 @@
     </div>
     <div>
 
-        <a asp-action="Edit" class="btn btn-outline-primary" asp-route-id="@Model.CategoryId">Edit</a>
+        <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model.CategoryId">Edit</a>
 
-        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
