--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -146,7 +146,7 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
-                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+                        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
                     </div>
                 </form>
             </div>
