--- a/Areas/Admin/Views/Products/Recycle.cshtml
+++ b/Areas/Admin/Views/Products/Recycle.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<WEB2.Models.Category>
+﻿@model IEnumerable<WEB2.Models.Product>
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -17,15 +18,13 @@
                 <div class="welcome-text">
                     <h4>Hi, welcome back!</h4>
 
-        
-                
-              
+             
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý sản phẩm</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Danh mục</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Sản phẩm</a></li>
                 </ol>
             </div>
         </div>
@@ -36,8 +35,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <a asp-action="Create"> <h4 class = "btn btn-outline-secondary">Tạo danh mục mới</h4></a>
-                      
+                             
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
@@ -45,20 +43,32 @@
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.ProductName)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.UnitPrice)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
+                                            @Html.DisplayNameFor(model => model.RawPrice)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
+                                            @Html.DisplayNameFor(model => model.MSRP)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Version)
                                         </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Color)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Category)
+                                        </th>
+                                     
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -66,24 +76,36 @@
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.CategoryName)
+                                                @Html.DisplayFor(modelItem => item.ProductName)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Description)
+                                                @Html.DisplayFor(modelItem => item.UnitPrice)
                                             </td>
+
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Active)
+                                                @Html.DisplayFor(modelItem => item.RawPrice)
                                             </td>
+
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Picture)
+                                                @Html.DisplayFor(modelItem => item.MSRP)
                                             </td>
+
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.ParentCategory.CategoryName)
+                                                @Html.DisplayFor(modelItem => item.Version)
                                             </td>
+
                                             <td>
-                                                <a asp-action="Edit" asp-route-id="@item.CategoryId" class="btn btn-secondary">Edit</a> 
-                                                <a asp-action="Details" asp-route-id="@item.CategoryId"class="btn btn-outline-primary">Details</a> 
-                                                <a asp-action="Delete" asp-route-id="@item.CategoryId"class="btn btn-danger">Delete</a>
+                                                @Html.DisplayFor(modelItem => item.Color)
+                                            </td>
+
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Category.CategoryId)
+                                            </td>
+                                     
+                                            <td>
+                                                <a asp-action="Edit" asp-route-id="@item.ProductId" class="btn btn-secondary">Edit</a> 
+                                                <a asp-action="Details" asp-area="" asp-controller = "Products" asp-route-id="@item.ProductId" class="btn btn-outline-primary">Details</a> 
+                                  
                                             </td>
                                         </tr>
                                     }
@@ -91,20 +113,32 @@
                                 <tfoot>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.CategoryName)
+                                            @Html.DisplayNameFor(model => model.ProductName)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Description)
+                                            @Html.DisplayNameFor(model => model.UnitPrice)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Active)
+                                            @Html.DisplayNameFor(model => model.RawPrice)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Picture)
+                                            @Html.DisplayNameFor(model => model.MSRP)
                                         </th>
+
                                         <th>
-                                            @Html.DisplayNameFor(model => model.ParentCategory)
+                                            @Html.DisplayNameFor(model => model.Version)
                                         </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Color)
+                                        </th>
+
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Category)
+                                        </th>
+                               
                                         <th></th>
                                     </tr>
                                 </tfoot>
