--- a/Areas/Admin/Views/Suppliers/Create.cshtml
+++ b/Areas/Admin/Views/Suppliers/Create.cshtml
@@ -58,11 +58,7 @@
               
       
          
-                    <div class="form-group">
-                        <label asp-for="CurrentOrder" class="control-label"></label>
-                        <input asp-for="CurrentOrder" class="form-control" />
-                        <span asp-validation-for="CurrentOrder" class="text-danger"></span>
-                    </div>
+         
           
                 
                     <div class="form-group">
@@ -82,7 +78,7 @@
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
-                        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+                        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
                     </div>
                 </form>
             </div>
