--- a/Areas/Admin/Views/Suppliers/Delete.cshtml
+++ b/Areas/Admin/Views/Suppliers/Delete.cshtml
@@ -59,13 +59,7 @@
             </dd>
         
            
-        
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CurrentOrder)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CurrentOrder)
-            </dd>
+     
            
           
             <dt class="col-sm-2">
@@ -91,8 +85,8 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="SupplierId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
     </form>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
