--- a/Areas/Admin/Views/Suppliers/Details.cshtml
+++ b/Areas/Admin/Views/Suppliers/Details.cshtml
@@ -59,13 +59,7 @@
             </dd>
          
            
-      
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.CurrentOrder)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.CurrentOrder)
-            </dd>
+   
           
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(model => model.URL)
@@ -89,9 +83,9 @@
     </div>
     <div>
 
-        <a asp-action="Edit" class="btn btn-outline-primary" asp-route-id="@Model.SupplierId">Edit</a>
+        <a asp-action="Edit" class="btn btn-secondary" asp-route-id="@Model.SupplierId">Edit</a>
 
-        <a asp-action="Index" class="btn btn-outline-danger">Trở về</a>
+        <a asp-action="Index" class="btn btn-outline-dark">Trở về</a>
     </div>
     <!-- Required vendors -->
     <script src="~/vendor/global/global.min.js"></script>
