--- a/Views/Products/Category.cshtml
+++ b/Views/Products/Category.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<WEB2.Models.Product>
 @{
-    ViewData["Title"] = "Điện thoại";
+    ViewData["Title"] = "";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section Styles {
