--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -125,7 +125,7 @@
                                     <td>Độ phân giải</td>
                                     <td>
                                         @Html.DisplayFor(model => model.Product.Screen.Resolution)
-                                    </td>
+                                 </td>
                                 </tr>
                                 <tr>
                                     <td>Tần số quét</td>
@@ -596,11 +596,198 @@
                     
                 </div>
             </div>
+            <div class="commentpannel">
+                <h5>Nhận xét về sản phẩm</h5>
+                <div class="m-3 cmt">
+                      <div class="individual mt-4">
+                          <div class="first-character"><span class="first-character1"></span></div>
+                          <div class="fullname"><span class="fullname1">Mhiba Meo Meo</span></div>
+                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
+                      </div>
+                      <div class="contentofcmt">
+                        <p>
+                        Sản phẩm mlem mlem
+                      </p>
+                    </div>
+                </div>
+                     <div class="m-3 cmt">
+                      <div class="individual mt-4">
+                          <div class="first-character"><span class="first-character1"></span></div>
+                          <div class="fullname"><span class="fullname1">Lhiba Meo Meo</span></div>
+                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
+                      </div>
+                      <div class="contentofcmt">
+                        <p>
+                        Sản phẩm mlem mlem
+                      </p>
+                    </div>
+                </div>
+                <div class="m-3 cmt">
+                      <div class="individual mt-4">
+                          <div class="first-character"><span class="first-character1"></span></div>
+                          <div class="fullname"><span class="fullname1">Qhiba Meo Meo</span></div>
+                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
+                      </div>
+                      <div class="contentofcmt">
+                        <p>
+                        Sản phẩm mlem mlem
+                      </p>
+                    </div>
+                </div>
+                <div class="m-3 cmt">
+                      <div class="individual mt-4">
+                          <div class="first-character"><span class="first-character1"></span></div>
+                          <div class="fullname"><span class="fullname1">Toan Dang</span></div>
+                          <div class="timeofcmt"><span><i class="bi bi-clock"></i> 25-12-2020 15:31:42</span></div>
+                      </div>
+                      <div class="contentofcmt">
+                        <p>
+                        Sản phẩm vừa miệng :3
+                      </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="col-md-4">
             <div class="mt-4 mb-3" id="danhgia">
                    <h5>Đánh giá về sản phẩm</h5>
+                   <div class="rating-box">
+                       <div><p>5
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                           </p>
+                           <div class="baseline">
+                               <div id="baseline1"></div>
+                           </div>
+                           <span><span id="bsl1">65</span> đánh giá</span>
+                       </div>
+                       <div><p>4
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                           </p>
+                           <div class="baseline">
+                               <div id="baseline2"></div>
+                           </div>
+                           <span><span id="bsl2">32</span> đánh giá</span>
+                       </div>
+                       <div><p>3
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                           </p>
+                           <div class="baseline">
+                               <div id="baseline3"></div>
+                           </div>
+                           <span><span id="bsl3">10</span> đánh giá</span>
+                       </div>
+                       <div><p>2
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                           </p>
+                           <div class="baseline">
+                               <div id="baseline4"></div>
+                           </div>
+                           <span><span id="bsl4">0</span> đánh giá</span>
+                       </div>
+                       <div><p>1
+                               <svg class="rating-checked bi bi-star-half" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                                  <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                               </svg>
+                           </p>
+                           <div class="baseline">
+                               <div id="baseline5"></div>
+                           </div>
+
+                           <span><span id="bsl5">0</span> đánh giá</span>
+                       </div>
+                   </div>
+            <div class="btndanhgia">
+                <a class="btn"  data-toggle="modal" data-target="#exampleModal1">Để lại đánh giá của bạn</a>
+                <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h6 class="modal-title" id="exampleModalLabel">Đánh giá & nhận xét sản phẩm</h6>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <form>
+                          <div class="form-group">
+                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Họ và tên">
+                          </div>
+                          <div class="form-group">
+                            <input type="tel" class="form-control" id="exampleInputPassword1" placeholder="Số điện thoại">
+                          </div>
+                          <div class="form-group">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Cảm nhận của bạn về sản phẩm" rows="5"></textarea>
+                          </div>
+                        </form>
+                        <div class="rating-system">
+                            <div class="container">
+                                   <div class="stars">
+                                    <input class="stars__checkbox" type="radio" id="first-star" name="star">
+                                    <label class="stars__star" for="first-star">
+                                        <svg class="stars__star-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                            viewBox="0 0 53.867 53.867" style="enable-background:new 0 0 53.867 53.867;" xml:space="preserve">
+                                            <polygon points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                                                10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "/>
+                                        </svg>
+                                    </label>
+                                    <input class="stars__checkbox" type="radio" id="second-star" name="star">
+                                    <label class="stars__star" for="second-star">
+                                        <svg class="stars__star-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                            viewBox="0 0 53.867 53.867" style="enable-background:new 0 0 53.867 53.867;" xml:space="preserve">
+                                            <polygon points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                                                10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "/>
+                                        </svg>
+                                    </label>
+                                    <input class="stars__checkbox" type="radio" id="third-star" name="star">
+                                    <label class="stars__star" for="third-star">
+                                        <svg class="stars__star-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                            viewBox="0 0 53.867 53.867" style="enable-background:new 0 0 53.867 53.867;" xml:space="preserve">
+                                            <polygon points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                                                10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "/>
+                                        </svg>
+                                    </label>
+                                    <input class="stars__checkbox" type="radio" id="fourth-star" name="star">
+                                    <label class="stars__star" for="fourth-star">
+                                        <svg class="stars__star-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                            viewBox="0 0 53.867 53.867" style="enable-background:new 0 0 53.867 53.867;" xml:space="preserve">
+                                            <polygon points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                                                10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "/>
+                                        </svg>
+                                    </label>
+                                    <input class="stars__checkbox" type="radio" id="fifth-star" name="star">
+                                    <label class="stars__star" for="fifth-star">
+                                        <svg class="stars__star-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                            viewBox="0 0 53.867 53.867" style="enable-background:new 0 0 53.867 53.867;" xml:space="preserve">
+                                            <polygon points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                                                10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "/>
+                                        </svg>
+                                    </label>
+                                </div>
+                                <div>
+                                 <h5 class="" style="text-align: center; display: none"><span id="rating-results"></span> / 5</h5>
+                                </div>
+                            </div>
+                            
+                        </div>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn" style="width: 100%; border-radius: 10px; ">Gửi đánh giá</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
+            </div>
+
         </div>
     </div>
 
@@ -661,10 +848,49 @@
                 let ch = $(".clickbuy").children().html();
                 return toHtml(ch);
             });
+            function rating_calc(val, sum){
+                if (val == 0 || sum == 0) return 0;
+                else if (val / sum == 0) return 100;
+                else return (val / sum) * 100;
+            }
+            let bsl1 = parseFloat($("#bsl1").text());
+            let bsl2 = parseFloat($("#bsl2").text());
+            let bsl3 = parseFloat($("#bsl3").text());
+            let bsl4 = parseFloat($("#bsl4").text());
+            let bsl5 = parseFloat($("#bsl5").text());
+            let sumbsl = bsl1 + bsl2 + bsl3 + bsl4 + bsl5;
+            
+            $("#baseline1").css("width", rating_calc(bsl1, sumbsl).toFixed(4) + "%")
+            $("#baseline2").css("width", rating_calc(bsl2, sumbsl).toFixed(4) + "%")
+            $("#baseline3").css("width", rating_calc(bsl3, sumbsl).toFixed(4) + "%")
+            $("#baseline4").css("width", rating_calc(bsl4, sumbsl).toFixed(4) + "%")
+            $("#baseline5").css("width", rating_calc(bsl5, sumbsl).toFixed(4) + "%")
+
+            $("#first-star").on("click", function(){
+                $("#rating-results").html("5");
+            })
+            $("#second-star").on("click", function(){
+                $("#rating-results").html("4");
+            })
+            $("#third-star").on("click", function(){
+                $("#rating-results").html("3");
+            })
+            $("#fourth-star").on("click", function(){
+                $("#rating-results").html("2");
+            })
+            $("#fifth-star").on("click", function(){
+                $("#rating-results").html("1");
+            })
+            $('.commentpannel').ready(function(){
+                $(this).find(('.cmt')).each(function(){
+                    $(this).find(".first-character1").html($(this).find(".fullname1").text().charAt(0).toUpperCase());
+                })
+            })
         });
+
     </script>
     <script>
-        window.onload = function() {
+             window.onload = function() {
                 function numberWithCommas(x) {
                 var parts = x.toString().split(".");
                 parts[0]=parts[0].replace(/\B(?=(\d{3})+(?!\d))/g,".");
