--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,20 +51,20 @@
                         <div>
                             <a class="dropdown-item"><strong>THƯƠNG HIỆU</strong></a>
                             <ul class="nav" style="width: 300px;">
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-iphone-220x48.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/samsungnew-220x48-1.png" width="90" /></a></li>
-                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/logo-xiaomi-220x48-5.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="7"><img src="//cdn.tgdd.vn/Brand/1/logo-iphone-220x48.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="8"><img src="//cdn.tgdd.vn/Brand/1/samsungnew-220x48-1.png" width="90" /></a></li>
+                                <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="9"><img src="//cdn.tgdd.vn/Brand/1/logo-xiaomi-220x48-5.png" width="90" /></a></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Vivo42-b_50.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="10"><img src="//cdn.tgdd.vn/Brand/1/Vivo42-b_50.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://cdn.tgdd.vn/Brand/1/OnePlus42-b_36.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="12"><img src="https://cdn.tgdd.vn/Brand/1/OnePlus42-b_36.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Nokia42-b_21.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="13"><img src="//cdn.tgdd.vn/Brand/1/Nokia42-b_21.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index"><img src="//cdn.tgdd.vn/Brand/1/Realme42-b_37.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Category" asp-route-id="14"><img src="//cdn.tgdd.vn/Brand/1/Realme42-b_37.png" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
