--- a/Areas/Admin/Views/PurchaseDetails/Create.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Create.cshtml
@@ -10,77 +10,124 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
     <link href="~/css/style.css" rel="stylesheet">
-    
+
     <script type="text/javascript">
-      $(document).ready(function () {
-        // Denotes total number of rows
-        var rowIdx = 0;
+          var product = [];
+          var price = [];
+          var quantity = [];
+          var total = 0;
+        $(document).ready(function () {
+          // Denotes total number of rows
+          var rowIdx = 0;
 
-        // jQuery button click event to add a row
-        $("#addBtn").on("click", function () {
-          // Adding a row inside the tbody.
-          $("#tbody").append(
-            `<tr id="R${++rowIdx}">
-                 <td class="row-index text-center">
-                 <p> ${rowIdx}</p>
-                 </td>
-                 <td class= "text-center">
-                   @{
-                    <select  class="form-control pro" asp-items="ViewBag.ProductId"></select>
-                 
-                   } 
+
+          // jQuery button click event to add a row
+          $("#addBtn").on("click", function () {
+            // Adding a row inside the tbody.
+            $("#tbody").append(
+              `<tr id="R${++rowIdx}">
+                   <td class="row-index text-center">
+                   <p> ${rowIdx}</p>
                    </td>
-                 <td class= "text-center">
-                    @{ <input type = "text" class="form-control pri" />}
-                    </td>
-                 <td class= "text-center">
-                 @{ <input class="form-control qua" type="text" /> }
-                    </td>
-                 <td class= "text-center">
-                    <p id = "total"></p>
-                    </td>
-                  <td class="text-center">
-                    <button class="btn btn-danger remove"
-                      type="button">Remove</button>
-                    </td>
-                  </tr>`
-          );
+                   <td class= "text-center">
+        @{
+                          <select   class="form-control" asp-items="ViewBag.ProductId" id="pro${rowIdx}"></select>
 
-          
-        });
+        }
+                     </td>
+                   <td class= "text-center">
+        @{
+            <input type = "text" class="form-control" id="pri${rowIdx}"/>
+        }
+                      </td>
+                   <td class= "text-center">
+        @{
+            <input class="form-control" type="text" id="qua${rowIdx}" />
+        }
+                      </td>
+                   <td class= "text-center">
+                      <p id="tol${rowIdx}"></p>
+                      </td>
+                    <td class="text-center">
+                      <button class="btn btn-danger remove"
+                        type="button">Remove</button>
+                      </td>
+                    </tr>`
+            );
+            $(`#qua${rowIdx}`).change(function(){
+                var pri = $(`#pri${rowIdx}`).val();
+                var qua = $(`#qua${rowIdx}`).val();
+                var name = $(`#pro${rowIdx}`).val();
+                   //  $(`#tol${rowIdx}`).val(pri * qua);
+                   document.getElementById(`tol${rowIdx}`).innerHTML = pri * qua;
+                   total +=pri * qua;
 
-        // jQuery button click event to remove a row.
-        $("#tbody").on("click", ".remove", function () {
-          // Getting all the rows next to the row
-          // containing the clicked button
-          var child = $(this).closest("tr").nextAll();
+                   document.getElementById("pay").innerHTML = total;
 
-          // Iterating across all the rows
-          // obtained to change the index
-          child.each(function () {
-            // Getting <tr> id.
-            var id = $(this).attr("id");
+                   product.push(name);
+                   price.push(pri);
+                   quantity.push(qua);
 
-            // Getting the <p> inside the .row-index class.
-            var idx = $(this).children(".row-index").children("p");
+            });
 
-            // Gets the row number from <tr> id.
-            var dig = parseInt(id.substring(1));
+            $('#sub').click(function(){
+              var suppierid = $('#supplierid').val();
 
-            // Modifying row index.
-            idx.html(`${dig - 1}`);
+              var model = new Object();
+              model.Productid = product;
+              model.Price = price;
+              model.Quantity = quantity;
+              model.Paid = total;
+              model.SupplierId = suppierid;
+              console.log(model);
+              jQuery.ajax({
+              type: "POST",
+              url: "@Url.Action("CreateBill","PurchaseDetails")",
+              dataType: "json",
+              contentType: "application/json; charset=utf-8",
+              data: JSON.stringify( model ),
+                  processData: true,
+                  cache: false,
 
-            // Modifying row id.
-            $(this).attr("id", `R${dig - 1}`);
+                  });
+              });
+
           });
 
-          // Removing the current row.
-          $(this).closest("tr").remove();
+          // jQuery button click event to remove a row.
+          $("#tbody").on("click", ".remove", function () {
+            // Getting all the rows next to the row
+            // containing the clicked button
+            var child = $(this).closest("tr").nextAll();
 
-          // Decreasing total number of rows by 1.
-          rowIdx--;
+            // Iterating across all the rows
+            // obtained to change the index
+            child.each(function () {
+              // Getting <tr> id.
+              var id = $(this).attr("id");
+
+              // Getting the <p> inside the .row-index class.
+              var idx = $(this).children(".row-index").children("p");
+
+              // Gets the row number from <tr> id.
+              var dig = parseInt(id.substring(1));
+
+              // Modifying row index.
+              idx.html(`${dig - 1}`);
+
+              // Modifying row id.
+              $(this).attr("id", `R${dig - 1}`);
+            });
+
+            // Removing the current row.
+            $(this).closest("tr").remove();
+
+            // Decreasing total number of rows by 1.
+            rowIdx--;
+          });
+
+
         });
-      });
     </script>
 </head>
 <body>
@@ -99,8 +146,13 @@
                 </ol>
             </div>
         </div>
-        <div class="container pt-4">
-            <div class="table-responsive">
+
+        <div class="container-fluid">
+            <div class="form-group">
+                <label class="control-label">Chọn nhà cung cấp</label>
+                <select class="form-control" asp-items="ViewBag.SupplierId" id = "supplierid"></select>
+            </div>
+            <div class="table-responsive card">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -108,16 +160,28 @@
                             <th class="text-center">Sản phẩm</th>
                             <th class="text-center">Giá</th>
                             <th class="text-center">Số lượng</th>
-                                 <th class="text-center">Thanh toán</th>
+                            <th class="text-center">Thanh toán</th>
                             <th class="text-center">Xóa</th>
                         </tr>
                     </thead>
                     <tbody id="tbody"></tbody>
                 </table>
             </div>
-            <button class="btn btn-md btn-primary" id="addBtn" type="button">
-                Thêm sản phẩm
-            </button>
+            <div>
+                <button class="btn btn-md btn-primary" id="addBtn" type="button">
+                    Thêm sản phẩm
+                </button>
+                <div class="float-right">
+                    <h4 class="text-primary "> Tổng: <span id="pay"></span> <span>VND</span></h4>
+
+                    <button class="btn btn-success" id="sub" type="button">
+                        Mua hàng
+                    </button>
+                </div>
+
+
+            </div>
+
         </div>
 
 
